--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 
 <head>
     <!-- 页面meta -->
@@ -21,33 +21,27 @@
             <div class="loginlogo"></div>
             <div class="loginCon">
 
-              <span class="el-form-item">
+                <span class="el-form-item">
                 <span class="userIcon"></span>
                 <span class="el-input">
                   <input class="el-input__inner" name="username" placeholder="管理员账号"/>
                 </span>
-              </span>
+                </span>
                 <span class="el-form-item">
                 <span class="pwdIcon"></span>
                 <span class="el-input">
                   <input class="el-input__inner" name="password"  placeholder="密码"/>
                 </span>
-
               </span>
-
             </div>
-
             <div class="loginBtn">
                 <input type="submit" class="el-button el-button--primary" value="登录">
             </div>
         </div>
     </form>
-
 </div>
 </body>
-<!-- 引入组件库-->
-<!--<script src="js/vue.js"></script>-->
-<!--<script src="js/elementui.js"></script>-->
+
 <script>
     window.onload = windowHeight; //页面载入完毕执行函数
     function windowHeight() {
