--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title>账号管理</title>
@@ -9,37 +9,10 @@
     <link rel="stylesheet" href="./plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/styleqingcheng.css">
 
-    <!-- 上传图片框样式，不使用上传组件可以删除此样式 -->
-    <!--    <style>-->
-    <!--        .avatar-uploader .el-upload {-->
-    <!--            border: 1px dashed #d9d9d9;-->
-    <!--            border-radius: 6px;-->
-    <!--            cursor: pointer;-->
-    <!--            position: relative;-->
-    <!--            overflow: hidden;-->
-    <!--        }-->
-    <!--        .avatar-uploader .el-upload:hover {-->
-    <!--            border-color: #409EFF;-->
-    <!--        }-->
-    <!--        .avatar-uploader-icon {-->
-    <!--            font-size: 28px;-->
-    <!--            color: #8c939d;-->
-    <!--            width: 150px;-->
-    <!--            height: 70px;-->
-    <!--            line-height: 150px;-->
-    <!--            text-align: center;-->
-    <!--        }-->
-    <!--        .avatar {-->
-    <!--            width: 150px;-->
-    <!--            height: 70px;-->
-    <!--            display: block;-->
-    <!--        }-->
-
-    <!--    </style>-->
 </head>
+
 <body class="hold-transition">
 <div id="app">
-
     <div class="content-header">
         <h1>管理<small>账号管理</small></h1>
         <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
@@ -56,15 +29,11 @@
                     <el-form-item label="账号">
                         <el-input v-model="searchMap.accountEmail" placeholder="请输入账号"></el-input></el-form-item>
                     <el-button type="primary" @click="fetchData()">查询</el-button>
-                    <!--测试删除功能的时候可以用-->
-<!--                    <el-button type="primary" @click="formVisible=true;pojo={}">新增</el-button>-->
                     <el-button type="primary" @click="formVisible=true;pojo={}">新增</el-button>
                 </el-form>
             </div>
 
             <el-table :data="tableData" border style="width: 100%">
-                <!--                <el-table-column prop="invitationId" label="邀请码id" width="100"></el-table-column>-->
-<!--                <el-table-column prop="accountId" label="账号Id" width="300"></el-table-column>-->
                 <el-table-column prop="accountEmail" label="账号" width="400"></el-table-column>
                 <el-table-column prop="accountPassword" label="密码" width="350"></el-table-column>
                 <el-table-column prop="accountUsingCount" label="账号使用人数" width="200"></el-table-column>
@@ -91,7 +60,6 @@
                 <!--修改和新增的弹出窗口-->
                 <el-dialog  title="编辑" :visible.sync="formVisible" >
                     <el-form label-width="150px">
-                        <!--                        <el-form-item label="邀请码号码"><el-input v-model="pojo.InvitationCode"></el-input></el-form-item>-->
                         <el-form-item label="账号"><el-input v-model="pojo.accountEmail"></el-input></el-form-item>
                         <el-form-item label="密码"><el-input v-model="pojo.accountPassword"></el-input></el-form-item>
                         <el-form-item>
@@ -101,15 +69,12 @@
                     </el-form>
                 </el-dialog>
             </div>
-
         </div>
     </div>
-
-
 </div>
 </body>
+
 <script src="./js/vue.js"></script>
-<!--<script src="./js/axios.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./js/elementui.js"></script>
 <script>
@@ -142,13 +107,10 @@
             fetchDataAll (){
                 axios.get(`./account/selectAll`).then(response => {
                     console.log(response);
-                    // this.tableData = response.data.rows;
-                    // this.total = response.data.total;
                     this.tableData = response.data;
                 });
             },
             save (){
-                // this.pojo.image= this.imageUrl; //如页面有图片上传功能放开注释
                 axios.post(`./account/${this.pojo.accountId == null?'insert':'update'}`,this.pojo).then(response => {
                     this.fetchData (); //刷新列表
                     this.formVisible = false ;//关闭窗口
@@ -160,7 +122,6 @@
                 axios.get(`./account/selectById?id=${accountId}`).then(response => {
                     console.log(response);
                     this.pojo = response.data;
-                    // this.imageUrl=this.pojo.image //显示图片  如页面有图片上传功能放开注释
                 })
             },
             dele (accountEmail){
@@ -173,22 +134,6 @@
                         this.fetchData (); //刷新列表
                     })
                 })
-            },
-            /*****图片上传相关代码  如页面有图片上传功能放开注释 **** */
-            handleAvatarSuccess(res, file) {
-                this.imageUrl = file.response;
-            },
-            beforeAvatarUpload(file) {
-                const isJPG = file.type === 'image/jpeg';
-                const isLt2M = file.size / 1024 / 1024 < 2;
-
-                if (!isJPG) {
-                    this.$message.error('上传头像图片只能是 JPG 格式!');
-                }
-                if (!isLt2M) {
-                    this.$message.error('上传头像图片大小不能超过 2MB!');
-                }
-                return isJPG && isLt2M;
             }
         }
     })
