--- a/src/main/webapp/captcha.html
+++ b/src/main/webapp/captcha.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
     <title>验证码管理</title>
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/styleqingcheng.css">
 </head>
+
 <body class="hold-transition">
 <div id="app">
-
     <div class="content-header">
         <h1>管理<small>验证码管理</small></h1>
         <el-breadcrumb separator-class="el-icon-arrow-right" class="breadcrumb">
@@ -28,27 +28,16 @@
                     <el-form-item label="邮箱账号">
                         <el-input v-model="searchMap.captchaTo" placeholder="请输入邮箱账号"></el-input></el-form-item>
                     <el-button type="primary" @click="fetchData()">查询</el-button>
-                    <!--测试删除功能的时候可以用-->
-                    <!--                    <el-button type="primary" @click="formVisible=true;pojo={}">新增</el-button>-->
-<!--                    <el-button type="primary" @click="formVisible=true;pojo={}">新增</el-button>-->
                 </el-form>
             </div>
 
             <el-table :data="tableData" border style="width: 100%">
-                <!--                <el-table-column prop="captchaId" label="验证码Id" width="300"></el-table-column>-->
                 <el-table-column prop="to" label="邮箱账号" width="320"></el-table-column>
                 <el-table-column prop="subject" label="邮件内容" width="190"></el-table-column>
                 <el-table-column prop="captchaCode" label="验证码" width="200"></el-table-column>
                 <el-table-column prop="captchaRead" label="是否已读" width="100"></el-table-column>
                 <el-table-column prop="captchaReceiveTime" label="验证码接收时间" width="380"></el-table-column>
             </el-table>
-<!--                <el-table-column prop="date" label="验证码发送时间" width="265"></el-table-column>-->
-<!--                <el-table-column label="操作"  >-->
-<!--                    <template slot-scope="scope">-->
-<!--                        <el-button @click="edit(scope.row.captchaId)" size="mini" type="primary" size="small">修改</el-button>-->
-<!--                        <el-button @click="dele(scope.row.captchaId)" size="mini" type="danger" size="small">删除</el-button>-->
-<!--                    </template>-->
-<!--                </el-table-column>-->
             <div class="pagination-container">
                 <el-pagination
                         class="pagiantion"
@@ -61,29 +50,12 @@
                         :total="total">
                 </el-pagination>
             </div>
-<!--            <div class="add-form">-->
-<!--                &lt;!&ndash;修改和新增的弹出窗口&ndash;&gt;-->
-<!--                <el-dialog  title="编辑" :visible.sync="formVisible" >-->
-<!--                    <el-form label-width="150px">-->
-<!--                        &lt;!&ndash;                        <el-form-item label="邀请码号码"><el-input v-model="pojo.InvitationCode"></el-input></el-form-item>&ndash;&gt;-->
-<!--                        <el-form-item label="账号"><el-input v-model="pojo.captcha"></el-input></el-form-item>-->
-<!--                        <el-form-item label="密码"><el-input v-model="pojo.accountPassword"></el-input></el-form-item>-->
-<!--                        <el-form-item>-->
-<!--                            <el-button type="primary" @click="save()">保存</el-button>-->
-<!--                            <el-button @click="formVisible = false" >关闭</el-button>-->
-<!--                        </el-form-item>-->
-<!--                    </el-form>-->
-<!--                </el-dialog>-->
-<!--            </div>-->
-
         </div>
     </div>
-
-
 </div>
 </body>
+
 <script src="./js/vue.js"></script>
-<!--<script src="./js/axios.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="./js/elementui.js"></script>
 <script>
@@ -116,13 +88,10 @@
             fetchDataAll (){
                 axios.get(`./captcha/selectAll`).then(response => {
                     console.log(response);
-                    // this.tableData = response.data.rows;
-                    // this.total = response.data.total;
                     this.tableData = response.data;
                 });
             },
             save (){
-                // this.pojo.image= this.imageUrl; //如页面有图片上传功能放开注释
                 axios.post(`./captcha/${this.pojo.captchaId == null?'insert':'update'}`,this.pojo).then(response => {
                     this.fetchData (); //刷新列表
                     this.formVisible = false ;//关闭窗口
@@ -134,7 +103,6 @@
                 axios.get(`./captcha/selectById?id=${captchaId}`).then(response => {
                     console.log(response);
                     this.pojo = response.data;
-                    // this.imageUrl=this.pojo.image //显示图片  如页面有图片上传功能放开注释
                 })
             },
             dele (captchaId){
@@ -147,22 +115,6 @@
                         this.fetchData (); //刷新列表
                     })
                 })
-            },
-            /*****图片上传相关代码  如页面有图片上传功能放开注释 **** */
-            handleAvatarSuccess(res, file) {
-                this.imageUrl = file.response;
-            },
-            beforeAvatarUpload(file) {
-                const isJPG = file.type === 'image/jpeg';
-                const isLt2M = file.size / 1024 / 1024 < 2;
-
-                if (!isJPG) {
-                    this.$message.error('上传头像图片只能是 JPG 格式!');
-                }
-                if (!isLt2M) {
-                    this.$message.error('上传头像图片大小不能超过 2MB!');
-                }
-                return isJPG && isLt2M;
             }
         }
     })
