--- a/src/main/webapp/account.html
+++ b/src/main/webapp/account.html
@@ -50,7 +50,7 @@
                         @size-change="fetchData"
                         @current-change="fetchData"
                         :current-page.sync="currentPage"
-                        :page-sizes="[10, 20, 30, 40]"
+                        :page-sizes="[100]"
                         :page-size="size"
                         layout="total, sizes, prev, pager, next, jumper"
                         :total="total">
@@ -85,7 +85,7 @@
                 tableData: [],
                 currentPage: 1,
                 total: 10,
-                size: 10,
+                size: 100,
                 searchMap: {},
                 pojo: {},
                 entity: {},
