--- a/src/main/webapp/captcha.html
+++ b/src/main/webapp/captcha.html
@@ -44,7 +44,7 @@
                         @size-change="fetchData"
                         @current-change="fetchData"
                         :current-page.sync="currentPage"
-                        :page-sizes="[10, 20, 30, 40]"
+                        :page-sizes="[100]"
                         :page-size="size"
                         layout="total, sizes, prev, pager, next, jumper"
                         :total="total">
@@ -66,7 +66,7 @@
                 tableData: [],
                 currentPage: 1,
                 total: 10,
-                size: 20,
+                size: 100,
                 searchMap: {},
                 pojo: {},
                 entity: {},
