--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -24,13 +24,13 @@
                 <span class="el-form-item">
                 <span class="userIcon"></span>
                 <span class="el-input">
-                  <input class="el-input__inner" name="username" placeholder="管理员账号"/>
+                  <input class="el-input__inner" name="username" placeholder="管理员账号" type="text"/>
                 </span>
                 </span>
                 <span class="el-form-item">
                 <span class="pwdIcon"></span>
                 <span class="el-input">
-                  <input class="el-input__inner" name="password"  placeholder="密码"/>
+                  <input class="el-input__inner" name="password"  placeholder="密码" type="password"/>
                 </span>
               </span>
             </div>
