--- a/src/main/webapp/invitations.html
+++ b/src/main/webapp/invitations.html
@@ -77,8 +77,28 @@
                 <!--批量新增弹出的窗口-->
                 <el-dialog  title="批量新增" :visible.sync="addFormVisible" >
                     <el-form label-width="150px">
-                        <el-form-item label="邀请码有效天数"><el-input v-model="entity.invitationLifetime"></el-input></el-form-item>
-                        <el-form-item label="邀请码个数"><el-input v-model="entity.count"></el-input></el-form-item>
+                        <el-form-item label="邀请码有效天数"> <template>
+                            <el-select v-model="entity.invitationLifetime" placeholder="请选择">
+                                <el-option
+                                        v-for="item in options1"
+                                        :key="item.value"
+                                        :label="item.label"
+                                        :value="item.value">
+                                </el-option>
+                            </el-select>
+                        </template>
+                        </el-form-item>
+
+                        <el-form-item label="邀请码个数">
+                            <el-select v-model="entity.count" placeholder="请选择">
+                                <el-option
+                                        v-for="item in options2"
+                                        :key="item.value"
+                                        :label="item.label"
+                                        :value="item.value">
+                                </el-option>
+                            </el-select>
+                            </el-form-item>
                         <el-form-item>
                             <el-button @click="addFormVisible = false" >取消</el-button>
                             <el-button type="primary" @click="insertMany()">确认新增</el-button>
@@ -107,7 +127,33 @@
                 pojo: {},
                 entity: {},
                 formVisible: false,
-                addFormVisible:false
+                addFormVisible:false,
+                options1: [{
+                    value: 1,
+                    label: '1'
+                }, {
+                    value: 3,
+                    label: '3'
+                }, {
+                    value: 7,
+                    label: '7'
+                }, {
+                    value: 30,
+                    label: '30'
+                }, {
+                    value: 180,
+                    label: '180'
+                }, {
+                    value: 366,
+                    label: '366'
+                }],
+                options2: [{
+                    value: 100,
+                    label: '100'
+                }, {
+                    value: 500,
+                    label: '500'
+                }]
             }
         },
         created(){
