show batch add invitation_code

--- a/src/main/webapp/management.html
+++ b/src/main/webapp/management.html
@@ -13,6 +13,7 @@
             <el-menu-item index="1"><a href="./invitations.html" target="_blank">邀请码管理</a></el-menu-item>
             <el-menu-item index="1"><a href="./captcha.html" target="_blank">验证码管理</a></el-menu-item>
             <el-menu-item index="1"><a href="./account.html" target="_blank">邮箱账号管理</a></el-menu-item>
+            <el-menu-item index="1"><a href="./batchInvitations.html" target="_blank">批量生成邀请码</a></el-menu-item>
             <el-menu-item index="1"><a href="./index.html" target="_blank">首  页</a></el-menu-item>
             <div class="right-menu">
                 <el-dropdown class="avatar-container right-menu-item" trigger="click">
