--- a/src/main/webapp/batchInvitations.html
+++ b/src/main/webapp/batchInvitations.html
@@ -50,9 +50,14 @@
                 </el-form>
             </div>
 
-            <el-table :data="tableData" border style="width: 100%">
-                <el-table-column prop="invitationCode" label="邀请码号码" ></el-table-column>
-            </el-table>
+<!--            <el-table :data="tableData" border style="width: 100%">-->
+<!--                <el-table-column prop="rows" label="邀请码号码" ></el-table-column>-->
+<!--            </el-table>-->
+            <ul >
+                <li v-for="item in tableData">
+                    {{ item }}
+                </li>
+            </ul>
             <div class="add-form">
 
             </div>
@@ -104,7 +109,7 @@
             insertMany () {
                 axios.post(`./invitation/insertMany`,this.entity).then(response => {
                     console.log(response);
-                    this.tableData = response.data;
+                    this.tableData = response.data.rows;
                 });
             }
         }
